Se creo el metodo registro libro, así como sus cargas a los dropdowns de cada relacion, ademas se creo una servicio para poder subir imagenes como portada

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ApiSettings": {
     "BaseUrl": "https://localhost:7270" // URL de tu API
+  },
+  "ImageSettings": {
+    "MaxFileSize": 5242880, // 5MB en bytes
+    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
+    "PortadasPath": "wwwroot/imagenes/portadas/",
+    "DefaultPortada": "default-book-cover.jpg"
   }
 }
