--- a/AppWebBiblioteca.csproj
+++ b/AppWebBiblioteca.csproj
@@ -10,4 +10,8 @@
     <Folder Include="wwwroot\imagenes\portadas\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+  </ItemGroup>
+
 </Project>
